main land checks completed
main land checks completed

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ remove island/.vs/remove island/v15/.suo
 remove island/remove island/remove island.vcxproj.user
 *.filters
 *.vcxproj
+remove island/.vs/remove island/v15/Browse.VC.opendb
